<!-- fragment_first.xml -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/NullButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmUpload"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        android:clickable="false"
        android:textSize="18sp"
        android:layout_marginBottom="32dp"
        />

    <!-- Button handler for confirm creation button -->
    <Button
        android:id="@+id/ConfirmCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/NullButton"
        android:layout_marginBottom="32dp"
        android:textSize="18sp"
        android:backgroundTint="#006400"
        />

    <!-- Button handler for the cancel upload option -->
    <Button
        android:id="@+id/CancelCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelUpload"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/NullButton"
        android:layout_marginBottom="32dp"
        android:textSize="18sp"
        android:backgroundTint="#8B0000"
        />


    <!-- Below is the information for account creation -->
    <Spinner
        android:id="@+id/roleDropdown"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/editConfirmPassword"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:inputType="textPassword"
        android:hint="@string/password"
        />

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPassword"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_above="@id/editPassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/editFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_above="@id/editUsername"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/full_name" />


    <TextView
        android:id="@+id/createAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:layout_above="@id/editFullName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="Create Account" />

</RelativeLayout>
